--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,30 +10,19 @@ material = "1.12.0"
 constraintlayout = "2.2.0"
 activity = "1.9.3"
 lifecycle = "2.8.7"
-
-# Network
+viewpager2 = "1.1.0"
+splashscreen = "1.0.1"
+fragment = "1.8.7"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
 kotlinx-serialization = "1.7.3"
 retrofit-kotlinx-serialization-converter = "1.0.0"
-
-# Async
 kotlinx-coroutines = "1.9.0"
-
-# Database
 room = "2.6.1"
-
-# DI
 hilt = "2.52"
 ksp = "2.0.21-1.0.28"
-
-# Navigation
 nav-graph = "2.8.4"
-
-# Security
 encrypted-prefs = "1.1.0"
-
-# DataStore
 datastore = "1.1.1"
 
 [libraries]
@@ -83,9 +72,16 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 
+viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2" }
+core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
+
+fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "nav-graph" }
+
