--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,10 +20,12 @@ retrofit-kotlinx-serialization-converter = "1.0.0"
 kotlinx-coroutines = "1.9.0"
 room = "2.6.1"
 hilt = "2.52"
+hilt-navigation-fragment = "1.3.0"
 ksp = "2.0.21-1.0.28"
 nav-graph = "2.8.4"
 encrypted-prefs = "1.1.0"
 datastore = "1.1.1"
+jetbrains-kotlin-jvm = "2.0.21"
 
 [libraries]
 # AndroidX Core
@@ -60,6 +62,7 @@ navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx",
 # Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+hilt-navigation-fragment = { group = "androidx.hilt", name = "hilt-navigation-fragment", version.ref = "hilt-navigation-fragment" }
 
 # Security
 encrypted-prefs-ktx = { group = "dev.spght", name = "encryptedprefs-ktx", version.ref = "encrypted-prefs" }
@@ -84,4 +87,6 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "nav-graph" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrains-kotlin-jvm" }
 
